--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1195,3 +1195,13 @@ chapter = {6},
     howpublished = "\url{https://www150.statcan.gc.ca/n1/pub/62f0026m/2017002/app-ann-g-eng.htm}",
     note = "[Online; accessed 15-July-2022]"
     }
+@article{szogi2008phosphorus,
+  title={Phosphorus recovery from poultry litter},
+  author={Sz{\"o}gi, AA and Vanotti, MB and Hunt, PG},
+  journal={Transactions of the ASABE},
+  volume={51},
+  number={5},
+  pages={1727--1734},
+  year={2008},
+  publisher={American Society of Agricultural and Biological Engineers}
+}
