Tabla costes finalizada2

--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -194,11 +194,15 @@ However, there exist households that are not connected to any sewer systems. The
 Phophorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
 
 \subsection{Phosphorus recovery techniques \textbf{(This section could be Supplementary Material)}}
-Table ??? shows a summary of the specifications of phosphorus recovery technologies for different streams. These table is based on different processes at different development level, from commercial to pilot plant stages. A collection of phosphorus recovery technologies for different streams can be found in the Table ??? of the Supplementary Material. Different scenarios are studied considered the technology readiness level (TRL) of the processes in order to determine the phosphorus that could be immediately recovered using commercial technologies (Scenario 1), the phosphorus that could be recovered in a near future by using technologies above pilot plant development stage (Scenario 2), and finally  prospective assessment of phosphorus recovery systems that at early research stages (Scenario 3). 
+Table \ref{table:TechParam} shows a summary of the specifications of phosphorus recovery technologies for different streams. These table is based on different processes at different development level, from commercial to pilot plant stages.
+%A collection of phosphorus recovery technologies for different streams can be found in the Table ??? of the Supplementary Material. 
+Different scenarios are studied considered the technology readiness level (TRL) of the processes in order to determine the phosphorus that could be immediately recovered using commercial technologies (Scenario 1), the phosphorus that could be recovered in a near future by using technologies above pilot plant development stage (Scenario 2), and finally  prospective assessment of phosphorus recovery systems that at early research stages (Scenario 3). 
 
 Phosphorus recovery costs include operating and annualized capital costs. Capital costs are annualized through the application of an annual capital charge ratio $\left( ACCR\right)$ as defined by \citet{towler2013chemical}, assuming a typical interest rate of 5\% and a plant lifetime of 20 years. Dynamic phosphorus recovery costs in function of the processing capacity have been considered in order to capture the economies of scale for those technologies for which sufficient data are available.
 
-\begin{sidewaystable}[h]
+
+
+\begin{sidewaystable}[ph!]
 	\centering
 	\caption{ADD $F$ denotes the phosphorus recovered as $\sfrac{\text{kg P}_{\text{recovered}}}{\text{year}}$, while $\lceil x \rceil$ represent the ceiling function applied to $x$. The definition of annual capital charge ratio $\left( ACCR\right)$ can be found in the Supplementary Material, Section ??.} \label{table:TechParam}
 	\resizebox{1.08\columnwidth}{!}{
@@ -281,6 +285,8 @@ Phosphorus recovery costs include operating and annualized capital costs. Capita
 			\end{threeparttable}
 	}
 \end{sidewaystable}
+
+
 
 \section{Results and discussion}
 \subsection{Phosphorus flows in Ontario}
