--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -201,8 +201,8 @@ Different scenarios are studied considered the technology readiness level (TRL) 
 Phosphorus recovery costs include operating and annualized capital costs. Capital costs are annualized through the application of an annual capital charge ratio $\left( ACCR\right)$ as defined by \citet{towler2013chemical}, assuming a typical interest rate of 5\% and a plant lifetime of 20 years. Dynamic phosphorus recovery costs in function of the processing capacity have been considered in order to capture the economies of scale for those technologies for which sufficient data are available.
 
 
-
-\begin{sidewaystable}[ph!]
+\begin{table}[h]
+%\begin{sidewaystable}[ph!]
 	\centering
 	\caption{ADD $F$ denotes the phosphorus recovered as $\sfrac{\text{kg P}_{\text{recovered}}}{\text{year}}$, while $\lceil x \rceil$ represent the ceiling function applied to $x$. The definition of annual capital charge ratio $\left( ACCR\right)$ can be found in the Supplementary Material, Section ??.} \label{table:TechParam}
 	\resizebox{1.08\columnwidth}{!}{
@@ -284,7 +284,8 @@ Phosphorus recovery costs include operating and annualized capital costs. Capita
 					\end{tablenotes}
 			\end{threeparttable}
 	}
-\end{sidewaystable}
+%\end{sidewaystable}
+\end{table}
 
 
 
