--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1291,3 +1291,20 @@ chapter = {6},
   publisher={Elsevier}
 }
 
+@misc{SlaughterhouseDistribution,
+    author = {{Agriculture and Agri-Food Canada}},
+    title = {{Distribution of slaughtering activity}},
+    institution  = {{Agriculture and Agri-Food Canada}},
+    year = {2021},
+    howpublished = "\url{https://agriculture.canada.ca/en/canadas-agriculture-sectors/animal-industry/red-meat-and-livestock-market-information/slaughter-and-carcass-weights/distribution-slaughtering-activity}",
+    note = "[Online; accessed 22-August-2022]"
+    }
+
+@misc{SlaughterhousePoultryAverageSize,
+    author = {{INAC Services}},
+    title = {{Poultry processing in  Canada}},
+    institution  = {{INAC Services}},
+    year = {2014},
+    howpublished = "\url{http://inacservices.com/poultry-processing-in-canada/}",
+    note = "[Online; accessed 22-August-2022]"
+    }
