--- a/SupMat/SM_Policies.tex
+++ b/SupMat/SM_Policies.tex
@@ -185,6 +185,29 @@ The size distribution of Ontario's CAFOs is not reported by public databases, bu
 	\caption{Distribution of CAFOs size in regions of the the Great Lakes area.}
 	\label{fig:CAFOsSizeDist}
 \end{figure}
+
+\section{Slaughter industry}
+Table \ref{table:SlaughterAnimals} collects the number of animals slaughtered and the phosphorus in slaughterhouse waste in the province of Ontario for year 2019.
+
+\begin{table}[h]
+	\centering
+	\caption{Truncated normal distribution fitting parameters for the distribution of cAFOs sizes in regions of the Great Lakes area.} \label{table:SlaughterAnimals}
+	\resizebox{0.99\columnwidth}{!}{
+		%		\begin{threeparttable}
+		\begin{tabular}{@{}lcccccc@{}}
+			\toprule
+			& Cattle  & Swine     & Sheep   & Rabbit        & Poultry                                                                         & Total                        \\ \midrule
+			\begin{tabular}[c]{@{}l@{}}Animals slaughtered in federally\\ licensed facilities (heads, 2019)\end{tabular}    & 628,366 & 4,010,926 & 84,721  & Not available & \multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}238,979,246 \\ (total)\end{tabular}} & \multirow{2}{*}{244,663,410} \\
+			\begin{tabular}[c]{@{}l@{}}Animals slaughtered in provincially\\ licensed facilities (heads, 2019)\end{tabular} & 99,561  & 368,267   & 266,946 & 225,377       &                                                                                 &                              \\
+			\begin{tabular}[c]{@{}l@{}}P flows through slaughterhouse\\ waste in t (2019)\end{tabular}                      & 2,222   & 621       & 42      & 7.3           & 904                                                                             & 3,796.6                      \\ \bottomrule
+		\end{tabular}
+		%			\begin{tablenotes}
+		%				\footnotesize
+		%				\item 1: \citet{MilkOntario}
+		%			\end{tablenotes}
+		%	\end{threeparttable}
+	}
+\end{table}
 	
 %\bibliographystyle{apacite}
 %\bibliographystyle{ieee}
