--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -382,6 +382,7 @@ The number of CAFOs in each cluster is determined through the Monte Carlo method
 Slaughterhouse waste is a waste flow from food industry which can be targeted for phosphorus recovery. Phosphorus can be recovered from the wastewater produced in slaughterhouses through struvite precipitation \citep{Pearl2Kcost2}, and from the solid residues from animal carcasses \citep{jupp2021phosphorus}. Phosphorus technologies suitable for phosphorus recovery from these sources are collected in Table \ref{table:TechParam}. Data on individual capacities for the slaughterhouses in Ontario is not available for estimating the effects of the economies of scale, and therefore average slaughterhouse capacities of 104,017, 802,186, and $14.4 \cdot 10^6$ cattle, hog, and poultry heads slaughtered per year respectively are assumed \citep{SlaughterhouseDistribution, SlaughterhousePoultryAverageSize}, resulting in 7, 6, and 17 catlle, hog, and poultry slaughtering facilities with associated phosphorus flows of 317.4, 103.5, and 53.2 metric tonnes/$\left(\text{facility} \cdot \text{year}\right) $ respectively. Phosphorus flows from sheep and rabbit slaughtered are considered negligible. The number of slaughtered animals can be found in Table ?? of Supplementary Material.
 
 \paragraph{\textbf{Urban sector}}
+Municipal wastewater contains significant amounts of phosphorus that can be recovered. It must be noted that phosphorus outflows from WWTPs are divided into phosphporus contained in the treated water and phosphorus contained in sludge. Phosphorus contained in water can be recovered through the formation of precipitates such as struvite, while phosphorus contained in sludge can be recovered either through the direct processing of sludge producing precipitates, of from sludge ashes after an incineraiton stage, obtaining different products such as phosphoric acid or calcium phosphare, as shown in Table \ref{table:TechParam}. The distribution of phosphorus between treated water and sludge considered is 14.1\% - 85.9\% respectively \citep{PFlows_Ontario}, based on the data reproted by NPRI and WSER databases REFs, which in alignment with the distribution values reported by \citep{egle_phosphorus_2016}.
 
 \subsection{Economic implications of phosphorus recovery in Ontario}
 Economic costs or saving derived from the recovery of P in the province and all implications related with economy
