Correcting livestock costs

--- a/PFlowsPaper/references.bib
+++ b/PFlowsPaper/references.bib
@@ -1308,3 +1308,10 @@ chapter = {6},
     howpublished = "\url{http://inacservices.com/poultry-processing-in-canada/}",
     note = "[Online; accessed 22-August-2022]"
     }
+
+@book{brunner2016handbook,
+  title={Handbook of material flow analysis: For environmental, resource, and waste engineers},
+  author={Brunner, Paul H and Rechberger, Helmut},
+  year={2016},
+  publisher={CRC press}
+}
