--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -53,7 +53,9 @@
 	\title{
 %		Anthropocentric uses of phosphorus: flows quantification and potential for recycling in Ontario
 %	Mapping phosphorus flows in the economic sectors of Ontario and assessing recovery and recycling potential
-	Phosphorus in Ontario's economic sectors: mapping flows and assessing recovery and recycling potential
+%	Phosphorus in Ontario's economic sectors: flows mapping and recovery economic analysis
+%	Phosphorus in Ontario's economic sectors: flows mapping and economic analysis of P recovery
+Phosphorus flows mapping and economic analysis for its recovery in the province of Ontario, Canada
 	}
 	
 	%% Group authors per affiliation:
@@ -83,11 +85,15 @@
 Phosphorus is an essential for production of food which has been intensively used for crop and livestock production since the development of synthetic fertilizers in the XIX and XX centuries \citep{Kausar19}. The combination of synthetic fertilizers with other modern intensive agricultural techniques have increased the productivity of agriculture and farming industries \citep{pingali2012green}.
 However, the intensive use of fertilizers in agriculture has resulted in the over-application of phosphorus in many regions worldwide REF, while the run of intensive livestock production facilities, also known as concentrated animal feeding operations (CAFOs) \citep{animal_unit_definition}, result in important difficulties in the management of the large amounts of manure produced, which is often spread in lands in the vicinity of CAFOs, which also leads to the accumulation of phosphorus in soil. Soil acts as a phosphorus reservoir \citep{ehlert2003potential}, building-up a legacy P that can be used for future crops, but also can be transported to waterbodies by erosion and runoff leading to the eutrophication of aquatic ecosystems.
 
-The dual dimension of the anthropogenic use of phosphorus, i.e., its key role in the food production system and the negative environmental impacts associated with the phosphorus used in intensive agricultural techniques, has been stated by the United Nations Environment Assembly in the resolution UNEP/EA.5/Res.2 \citep{UN_Phosphorus}. An additional factor to be considered for addressing the phosphorus challenge is the non-renewable nature of phosphorus, since the phosphorus consumed is not replenished by natural means at human time scale, and there is currently no known synthetic substitute for this material \citep{cordell2009story}. Since the global phosphorus reserves are concentrated in a few number of regions, the supply of phosphorus from a limited number of global supply chains lacks resiliency and it has been proven that it can be globally disrupted by regional events and conflicts, resulting geopolitical tensions \citep{FAO_UkraineWar}. As a consequence, the recovery and recycling of phosphorus is not just a desirable but also a necessary approach to assure a sustainable, reliable, and sovereign food production system. 
+The dual dimension of the anthropogenic use of phosphorus, i.e., its key role in the food production system and the negative environmental impacts associated with the phosphorus used in intensive agricultural techniques, as it has been stated by the United Nations Environment Assembly in the resolution UNEP/EA.5/Res.2 \citep{UN_Phosphorus}. An additional factor to be considered for addressing the phosphorus challenge is the non-renewable nature of phosphorus, since the phosphorus consumed is not replenished by natural means at human time scale, and there is currently no known synthetic substitute for this material \citep{cordell2009story}. Since the global phosphorus reserves are concentrated in a few number of regions, the supply of phosphorus from a limited number of global supply chains lacks resiliency and it has been proven that it can be globally disrupted by regional events and conflicts, resulting geopolitical tensions \citep{FAO_UkraineWar}. As a consequence, the recovery and recycling of phosphorus is not just a desirable but also a necessary approach to assure a sustainable, reliable, and sovereign food production system. 
 
 Although the main uses of phosphorus are in the agri-food sector, phosphorus is also involved in other industrial activities, including steel, chemical, and forestry industries. Henceforth, phosphorus is a key material for many aspects of human development. As a result, mapping the phosphorus flows involved in human activities to detect opportunities for recovery and recycling is essential for, in a second stage, assess amount of phosphorus that is viable to recover, the economical costs involved, and the enhancement in terms of resiliency of the regional food production system, savings from the reduction of phosphorus imports, and the mitigation of phosphorus pollution on the region implementing strategies for phosphorus recovery and recycling. The quantification of phosphorus flows has been addressed in previous works in the literature for certain sectors such as the agri-food sector \citep{boh2020nitrogen, zhou2021model, nesme2018global}. Additionally, studies on the global phosphorus flows have also been performed \citep{villalba2008global, chen2016half}, although these studies tend to have a low flow resolution since these are aggregated by major sectors. Additionally, the works quantifying phosphorus often include qualitative recommendations to improve the phosphorus use efficiency and recycling \citep{van2016phosphorus, senthilkumar2012conceptual}, but often they do not include quantitivae assessments on the amount of phopshorus which recovery is feasible along with the costs involved. Conversely, those works focused on estimating the recoverable phosphorus and the associated recovery cost target specific flows, lacking a holistic perspective of the phosphorus flows in the various human activities \citep{martin2021geospatial, sampat2018technologies}.
 
-In this work, we intend to perform a holistic approach to the opportunities for phosphorus recovery and recycling in the Canadian province of Ontario. In a first stage, we proceed to ma the phosphorus flows involved in the economical sectors of Ontario, i.e., the agri-food, industrial, and urban sectors. This data is used in a second stage to identify the flows in which phosphorus recovery is feasible, determining the amount of phosphorus that could be recovered within the province considering different scenarios regarding the technology readiness level of different phosphorus recovery processes, as well as the costs associated with phosphorus recovery. Finally, we discuss the implications that would be derived from implementing active phosphorus recovery and recycling approaches regarding phosphorus supply and use in Ontario.
+In this work, we intend to perform a holistic approach to phosphorus management,
+%by mapping the phosphorus flows and identifying the opportunities for phosphorus
+recovery, and recycling usingin the Canadian province of Ontario. In a first stage, we proceed to map the phosphorus flows involved in the economical sectors of Ontario, i.e., the agricultural, industrial, and urban sectors. This data is used in a second stage to identify the flows in which phosphorus recovery is feasible, estimating the amount of phosphorus that could be recovered within the province considering
+%different scenarios regarding the technology readiness level of
+different phosphorus recovery technologies with technology readiness levels equal or above 6, as well as the costs associated with phosphorus recovery. Finally, we discuss the implications that would be derived from implementing active phosphorus recovery and recycling approaches regarding phosphorus supply and use in Ontario.
 
 \section{Methods}
 %\subsection{Scope}
@@ -102,12 +108,14 @@ In this work, we intend to perform a holistic approach to the opportunities for 
 %	\label{fig:Scope}
 %\end{figure}
 
-\subsection{Spatial resolution}
-Phosphorus flows have been mapped within the Canadian province of Ontario, and thus the political borders of Ontario has been considered as the boundaries for the substance flow analysis performed. In those cases where the data was availbale, the distribution of phosphorus flows within Ontario has also been studied at Census Division level \citep{CensusDivisionCD}. The database collecting the IDs of Ontario Census Divisions, their names, and geospatial information is taken from \citet{CensusDivisionOpendatasoft}.
+\subsection{Spatial boundaries and resolution}
+Phosphorus flows have been mapped within the Canadian province of Ontario, and thus the political borders of Ontario has been considered as the boundaries for the material flow analysis (MFA) performed \citep{brunner2016handbook}. In those cases where the data was availbale, the distribution of phosphorus flows within Ontario has also been studied at Census Division level \citep{CensusDivisionCD}. The database collecting the IDs of Ontario Census Divisions, their names, and geospatial information is taken from \citet{CensusDivisionOpendatasoft}.
+
+{\color{red}Ask Melissa if we can reproduce the maps in the supplementary material}
 
 {\color{red}ADD MAP WITH CENSUS DIVISIONS????}
 
-\subsection{Temporal resolution}
+\subsection{Temporal boundaries}
 The study has being performed for year 2019 since the most of data required is available for this year. In addition, the temporal evolution of the largest phosphorus flows, i.e., agricultural and wastewater phosphorus flows, has been studied for a period of 13 years from 2007 to 2019.
 %The study has being performed for years 2001-2021. However, for the years 2001-2006 and 2020-2021 there are some unavailable data, resulting in a partial loose resolution of the study. Therefore, the most complete information on agricultural P flows is reported for the years 2007-2019.
 
@@ -193,10 +201,10 @@ However, there exist households that are not connected to any sewer systems. The
 
 Phophorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
 
-\subsection{Phosphorus recovery techniques \textbf{(This section could be Supplementary Material)}}
-Table \ref{table:TechParam} shows a summary of the specifications of phosphorus recovery technologies for different streams. These table is based on different processes at different development level, from commercial to pilot plant stages.
+\subsection{Phosphorus recovery techniques}
+There exist different processes for phosphorus recovery from different sources at technologies readiness levels of 6 or above, i.e., at commercial or pilot plant stage. Since the flows from different processes have different properties, the techniques for phosphorus recovery vary, as well as their recovery efficiencies and products obtained. Table \ref{table:TechParam} shows a summary of the specifications of the phosphorus recovery technologies for different streams, as well as literature references with comprehensive descriptions of each system. We noted that the phosphorus recovery processes currently available exceed the systems included in this work, nonetheless the processes considered are a selection of the main techniques for phosphorus recovery, although different processes may have been developed through the fundamentals of the same technique, e.g., struvite precipitation. These table is based on different processes at different development level, from commercial to pilot plant stages.
 %A collection of phosphorus recovery technologies for different streams can be found in the Table ??? of the Supplementary Material. 
-Different scenarios are studied considered the technology readiness level (TRL) of the processes in order to determine the phosphorus that could be immediately recovered using commercial technologies (Scenario 1), the phosphorus that could be recovered in a near future by using technologies above pilot plant development stage (Scenario 2), and finally  prospective assessment of phosphorus recovery systems that at early research stages (Scenario 3). 
+%Different scenarios are studied considered the technology readiness level (TRL) of the processes in order to determine the phosphorus that could be immediately recovered using commercial technologies (Scenario 1), the phosphorus that could be recovered in a near future by using technologies above pilot plant development stage (Scenario 2), and finally  prospective assessment of phosphorus recovery systems that at early research stages (Scenario 3). 
 
 Phosphorus recovery costs include operating and annualized capital costs. Capital costs are annualized through the application of an annual capital charge ratio $\left( ACCR\right)$ as defined by \citet{towler2013chemical}, assuming a typical interest rate of 5\% and a plant lifetime of 20 years. Dynamic phosphorus recovery costs in function of the processing capacity have been considered in order to capture the economies of scale for those technologies for which sufficient data are available.
 
