Trabajo actualizado por falta de datos de Stats Canada

--- a/Data/CAFOSSizesDistributions/CAFOS_Sizes_DistributionsCanadaVersion.ipynb
+++ b/Data/CAFOSSizesDistributions/CAFOS_Sizes_DistributionsCanadaVersion.ipynb
@@ -790,7 +790,7 @@
    "id": "defa250c-83a9-4364-8b90-2c2771360713",
    "metadata": {},
    "source": [
-    "# Work with average values"
+    "# Work with average values from statistics Canada"
    ]
   },
   {
