--- a/PFlowsPaper/PFlowsPaper.tex
+++ b/PFlowsPaper/PFlowsPaper.tex
@@ -199,7 +199,7 @@ Phosphorus flows through WWTPs is estimated combining data from the National Pol
 
 However, there exist households that are not connected to any sewer systems. These households are equipped with septic systems to perform a rough treatment of the wastewater produced prior to its release into the environment, which typically consist into a septic tank that separates solid matter from the wastewater, and a drainfield where the effluent is discharged. The estimation of phosphorus releases from septic systems is based on the fraction of households equipped with these systems, estimated on 13\% \citep{CanadaSepticSystems}, which are inhabited by an average of 2.58 individuals \citep{CanadaPersonPerHouse}, and the average phosphorus load rate from septic systems, which is estimated on 0.81 kg of phosphor per person per year for the Lake Erie Basin in Ontario by \citet{oldfield2020estimation}.
 
-Phophorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
+Phosphorus flows in the form of food and organic waste are based on applying food loss factors for the steps associated with food processing \citep{FoodLossesFAO}, considering the food production and import values estimated in Section \ref{section:AgriSector}.
 
 \subsection{Phosphorus recovery techniques}
 There exist different processes for phosphorus recovery from different sources at technologies readiness levels of 6 or above, i.e., at commercial or pilot plant stage. Since the flows from different processes have different properties, the techniques for phosphorus recovery vary, as well as their recovery efficiencies and products obtained. Table \ref{table:TechParam} shows a summary of the specifications of the phosphorus recovery technologies for different streams, as well as literature references with comprehensive descriptions of each system. We noted that the phosphorus recovery processes currently available exceed the systems included in this work, nonetheless the processes considered are a selection of the main techniques for phosphorus recovery, although different processes may have been developed through the fundamentals of the same technique, e.g., struvite precipitation. These table is based on different processes at different development level, from commercial to pilot plant stages.
